// [START declaration]
syntax = "proto3";
package tengu;

import "proto/contracts/models.proto";
import "proto/custom/annotations.proto";

option go_package = "pkg/app/server/contracts";

// [START files resource]
service Files {
  // Commands

  rpc Create(CreateFileCommand) returns (FileEvent) {
    option (custom.documentation) = {
      description: "creates a file with no content",
      summary: "creates file",
      tags: ["private"]
    };
  }
  rpc Validate(ValidateFilesCommand) returns (FileEvents) {
    option (custom.documentation) = {
      description: "validates existing file",
      summary: "validates file",
      tags: ["private"]
    };
  }
  rpc Delete(DeleteFilesCommand) returns (FileEvents) {
    option (custom.documentation) = {
      description: "delete existing file",
      summary: "delete file",
      tags: ["private"]
    };
  }
  rpc RegisterProcessed(RegisterProcessedCommand) returns (FileEvent) {
    option (custom.documentation) = {
      description: "register processed files to existing file",
      summary: "register processed file",
      tags: ["private"]
    };
  }
  rpc ListInvalidOlderThan(ListInvalidFilesOlderThanQuery) returns (StringListResponse) {
    option (custom.documentation) = {
      description: "list invalid files older than time",
      summary: "list old invalid files",
      tags: ["private"]
    };
  }

  // Queries

  rpc GetPublicCDNEndpoint(PublicCDNEndpointQuery) returns (FileEvent) {
    option (custom.documentation) = {
      description: "register processed files to existing file",
      summary: "register processed file",
      tags: ["private"]
    };
  }
}
// [END files resource]
